--- a/API_Rick_and_Morty_hubspot/package.json
+++ b/API_Rick_and_Morty_hubspot/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.2",
+    "request": "^2.88.2",
     "underscore": "^1.13.6"
   },
   "devDependencies": {
