--- a/API_Rick_and_Morty_hubspot/package.json
+++ b/API_Rick_and_Morty_hubspot/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "start": "node src/index.js"
   },
   "keywords": [],
@@ -19,6 +20,8 @@
     "underscore": "^1.13.6"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.3",
+    "supertest": "^6.3.4"
   }
 }
