--- a/API_Rick_and_Morty_hubspot/package.json
+++ b/API_Rick_and_Morty_hubspot/package.json
@@ -17,7 +17,8 @@
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.2",
     "request": "^2.88.2",
-    "underscore": "^1.13.6"
+    "underscore": "^1.13.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
